Add go fmt test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,3 +33,8 @@ jobs:
 
       - name: Run client-helm unit test
         run: go test -v ./...
+
+      - name: Run go fmt test
+        run: hack/verify-gofmt.sh
+        env:
+          GO111MODULE: auto
